I did the header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 </head>
 <body>
 
-   
+    <header>
+        <a class="contenedor-logo" href="./index.html">
+            <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Logo de la empresa">
+        </a>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#experiencia">Experiencia</a>
+            <a href="#servicios">Servicios</a>
+            <a href="#contactos">Contacto</a>
+        </nav>
+    </header>
 
 </body>
 </html>
