I did the footer

--- a/index.html
+++ b/index.html
@@ -23,5 +23,35 @@
         </nav>
     </header>
 
+    <main class="main">
+        <section class="main__section" id="presentacion"></section>
+        <section class="main__section" id="quienes-somos"></section>
+        <section class="main__section" id="nuestros-servicios"></section>
+        <section class="main__section" id="experiencia"></section>
+        <section class="main__section" id="contactanos"></section>
+    </main>
+    
+
+    <footer class="footer">
+        <div class="footer__column">
+            <h3 class="footer__title">Información general</h3>
+            <p class="footer__content">Nit: 830.505.044-3</p>
+            <p class="footer__content">Ciudad: Barranquilla</p>
+            <p class="footer__content">Aliado: Geointerventorias S.A.S</p>
+        </div>
+        <div class="footer__column">
+            <h3 class="footer__title">Contacto</h3>
+            <p class="footer__content">gestion@dvp.com.co</p>
+            <p class="footer__content">3104698801</p>
+            <p class="footer__content">Carrera 59 No. 77 - 60 Oficina 101</p>
+        </div>
+        <div class="footer__column">
+            <h3 class="footer__title">Fundadores</h3>
+            <p class="footer__content">Vianey Patricia Lara Castro</p>
+            <p class="footer__content">Jose Joaquin Lara</p>
+        </div>
+    </footer>
+    
+
 </body>
 </html>
