I did the header static

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <main class="main">
+    <main class="main" id="home">
         <section class="main__section main__section--presentacion" id="presentacion">
             <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1>
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
@@ -58,6 +58,6 @@
         </div>
     </footer>
     
-
+    <script src="./main.js"></script>
 </body>
 </html>
