--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         </nav>
     </header>
 
-    <main class="main" id="home">
-        <section class="main__section main__section--presentacion" id="presentacion">
+    <main class="main" >
+        <section class="main__section main__section--presentacion"  id="home">
             <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1>
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
             <a href="#contactanos" class="contact-button main__section--presentacion--son">Contacto</a>
             <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Diseños de vías y pavimento" >
         </section>
         
-        <section class="main__section" id="quienes-somos"></section>
+        <section class="main__section main__section--quienessomos" id="experiencia"></section>
         <section class="main__section" id="nuestros-servicios"></section>
         <section class="main__section" id="experiencia"></section>
         <section class="main__section" id="contactanos"></section>
