I started the quienessomos main section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Diseños de vías y pavimento" >
         </section>
         
-        <section class="main__section main__section--quienessomos" id="experiencia"></section>
+        <section class="main__section main__section--quienessomos" id="experiencia">
+            <h2 class="main__section--quienessomos__title">Quiénes somos</h2>
+            <p class="main__section--quienessomos__description">Somos unas empresas de ingenieras debidamente registradas en cámara de comercio, con un objetivo principal que es poner a disposición nuestros servicios especializados en las áreas del diseño vial, interventorías de obras, laboratorio de suelos y pavimentos, contando con un amplio personal especialista en cada una de las áreas a servir...</p>
+            <img src="https://media.istockphoto.com/id/996692544/es/foto/silueta-de-ingenier%C3%ADa-y-construcci%C3%B3n-equipo-trabajo-autopista-ir-a-ciudad-sobre-pastel-al.webp?s=1024x1024&w=is&k=20&c=DT5Rghu-BL1Ib_bXM9QtsppV5Snd2Nn6uS3aUiNvWbs=" alt="Ingeniería y construcción" class="main__section--quienessomos__image">
+        </section>
+        
         <section class="main__section " id="nuestros-servicios"></section>
         <section class="main__section" id="experiencia"></section>
         <section class="main__section" id="contactanos"></section>
