--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <section class="main__section main__section--quienessomos" id="experiencia">
             <h2 class="main__section--quienessomos__title">Quiénes somos</h2>
-            <p class="main__section--quienessomos__description">Somos unas empresas de ingenieras debidamente registradas en cámara de comercio, con un objetivo principal que es poner a disposición nuestros servicios especializados en las áreas del diseño vial, interventorías de obras, laboratorio de suelos y pavimentos, contando con un amplio personal especialista en cada una de las áreas a servir...</p>
+            <p class="main__section--quienessomos__description">Somos una empresa de ingeniería debidamente registrada en la Cámara de Comercio, con el objetivo principal de ofrecer nuestros servicios especializados en diseño vial, interventoría de obras, y análisis en laboratorio de suelos y pavimentos. Contamos con un equipo amplio de especialistas altamente cualificados en cada una de las áreas que servimos.</p>
             <img src="https://media.istockphoto.com/id/996692544/es/foto/silueta-de-ingenier%C3%ADa-y-construcci%C3%B3n-equipo-trabajo-autopista-ir-a-ciudad-sobre-pastel-al.webp?s=1024x1024&w=is&k=20&c=DT5Rghu-BL1Ib_bXM9QtsppV5Snd2Nn6uS3aUiNvWbs=" alt="Ingeniería y construcción" class="main__section--quienessomos__image">
         </section>
         
