I am doing nuestros servicios section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,91 @@
             <img src="https://media.istockphoto.com/id/996692544/es/foto/silueta-de-ingenier%C3%ADa-y-construcci%C3%B3n-equipo-trabajo-autopista-ir-a-ciudad-sobre-pastel-al.webp?s=1024x1024&w=is&k=20&c=DT5Rghu-BL1Ib_bXM9QtsppV5Snd2Nn6uS3aUiNvWbs=" alt="Ingeniería y construcción" class="main__section--quienessomos__image">
         </section>
         
-        <section class="main__section " id="nuestros-servicios"></section>
+        <section class="main__section main__section--nuestros-servicios" id="servicios">
+            <h2 class="main__section--nuestros-servicios__title">Nuestros servicios</h2>
+            <div class="main__section--nuestros-servicios__content">
+
+                <article class="card ">
+
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+
+                    <div class="card__info ">
+                        <a href="./blogDosVariables.html" class="card__infoContent">
+
+                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+
+                            <section class="card__description">
+
+                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+
+                            </section>
+                        </a>
+
+                    </div>
+                </article>
+
+                <article class="card ">
+
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+
+                    <div class="card__info ">
+                        <a href="./blogDosVariables.html" class="card__infoContent">
+
+                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+
+                            <section class="card__description">
+
+                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+
+                            </section>
+                        </a>
+
+                    </div>
+                </article>
+
+                <article class="card ">
+
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+
+                    <div class="card__info ">
+                        <a href="./blogDosVariables.html" class="card__infoContent">
+
+                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+
+                            <section class="card__description">
+
+                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+
+                            </section>
+                        </a>
+
+                    </div>
+                </article>
+
+                <article class="card ">
+
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+
+                    <div class="card__info ">
+                        <a href="./blogDosVariables.html" class="card__infoContent">
+
+                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+
+                            <section class="card__description">
+
+                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+
+                            </section>
+                        </a>
+
+                    </div>
+                </article>
+
+            </div>
+        </section>
+        
+
+        </section>
         <section class="main__section" id="experiencia"></section>
         <section class="main__section" id="contactanos"></section>
     </main>
