I am fixing the card

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
                 <article class="card ">
 
-                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                     <div class="card__info ">
                         <a href="./blogDosVariables.html" class="card__infoContent">
 
-                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+                            <h2 class="card__h2" >Interventoría</h2>
 
                             <section class="card__description">
 
@@ -62,12 +62,12 @@
 
                 <article class="card ">
 
-                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                     <div class="card__info ">
                         <a href="./blogDosVariables.html" class="card__infoContent">
 
-                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+                            <h2 class="card__h2" >Construcción</h2>
 
                             <section class="card__description">
 
@@ -81,12 +81,12 @@
 
                 <article class="card ">
 
-                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                     <div class="card__info ">
                         <a href="./blogDosVariables.html" class="card__infoContent">
 
-                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+                            <h2 class="card__h2" >Estudios y diseños</h2>
 
                             <section class="card__description">
 
@@ -100,12 +100,12 @@
 
                 <article class="card ">
 
-                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="In this picture, there is background code "> </a>
+                    <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                     <div class="card__info ">
                         <a href="./blogDosVariables.html" class="card__infoContent">
 
-                            <h2 class="card__h2" >Elegir tu primer lenguaje de programación: Analizando variables para tomar la mejor decisión</h2>
+                            <h2 class="card__h2" >Laboratorios</h2>
 
                             <section class="card__description">
 
