I am doing transtitions and animations

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                     </div>
                 </article>
 
+                <div class="arrow arrow-left" onclick="scrollCards('left')">&lt;</div>
+                <div class="arrow arrow-right" onclick="scrollCards('right')">&gt;</div>
+
+
             </div>
         </section>
         
