I am fixing the problem with the row

--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
                     </div>
                 </article>
 
-                <div class="arrow arrow-left" onclick="scrollCards('left')">&lt;</div>
-                <div class="arrow arrow-right" onclick="scrollCards('right')">&gt;</div>
-
 
             </div>
+            <div class="arrow arrow-left" id="arrow-left">&lt;</div>
+            <div class="arrow arrow-right" id="arrow-right">&gt;</div>
         </section>
         
 
