--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                             <section class="card__description">
 
-                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+                                <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
 
                             </section>
                         </a>
@@ -71,7 +71,7 @@
 
                             <section class="card__description">
 
-                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+                                <p class="card__p">Nuestra pasión por construir lo inimaginable nos define en DVP. Lideramos con innovación y precisión, transformando visiones en realidades concretas. Cada estructura es un testimonio de durabilidad, funcionalidad y belleza, construida para perdurar.</p>
 
                             </section>
                         </a>
@@ -90,7 +90,7 @@
 
                             <section class="card__description">
 
-                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+                                <p class="card__p">En DVP, damos vida a ideas con diseños que inspiran. Nuestra creatividad y experiencia nos permiten crear soluciones a medida, combinando estética con funcionalidad. Nos adelantamos al futuro, diseñando espacios que definen la próxima generación de ingeniería.</p>
 
                             </section>
                         </a>
@@ -98,7 +98,7 @@
                     </div>
                 </article>
 
-                <article class="card ">
+                <article class="card card__four">
 
                     <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
@@ -109,7 +109,7 @@
 
                             <section class="card__description">
 
-                                <p class="card__p">Entérate de las variables clave a tener en cuenta al elegir tu primer lenguaje de programación. Desde tus objetivos y motivaciones hasta verificar si un solo lenguaje o tecnología resuelve las necesidades de tu proyecto. Descubre cómo tomar la mejor decisión para ti.</p>
+                                <p class="card__p">La excelencia en DVP se cimenta en nuestra avanzada tecnología de laboratorio. Analizamos y probamos con precisión para asegurar que cada material no solo cumpla, sino que exceda los estándares de calidad. Nuestra meticulosidad es la base de proyectos sin precedentes.</p>
 
                             </section>
                         </a>
