I did the transtition

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 
         <section class="main__section main__section--experiencia" id="experiencia">
 
-            <article class="card ">
+            <article class="card card__transition ">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -180,12 +180,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -199,12 +199,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -218,12 +218,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -237,12 +237,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -256,12 +256,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -275,12 +275,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -294,12 +294,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
@@ -313,12 +313,12 @@
                 </div>
             </article>
 
-            <article class="card ">
+            <article class="card card card__transition">
 
-                <a href="./blogDosVariables.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
 
                 <div class="card__info ">
-                    <a href="./blogDosVariables.html" class="card__infoContent">
+                    <a href="" class="card__infoContent">
 
                         <h2 class="card__h2" >Interventoría</h2>
 
