I am doing the modal code

--- a/index.html
+++ b/index.html
@@ -333,6 +333,17 @@
             </article>
         </section>
         <section class="main__section main__section--contacto" id="contactos"></section>
+
+        <div id="modal-container" class="modal-hidden modal__style">
+            <div class="modal-content">
+                <button id="close-modal">X</button>
+                <!-- Contenido del modal, como la grid de imágenes -->
+                <div class="grid-container">
+                    <!-- Imágenes aquí -->
+                </div>
+            </div>
+        </div>
+
     </main>
     
 
