I am working in the grid

--- a/index.html
+++ b/index.html
@@ -332,6 +332,18 @@
                 </div>
             </article>
         </section>
+
+        
+        <div id="modal-container" class="modal-hidden modal__style">
+            <div class="modal-content">
+                <button id="close-modal">X</button>
+                <!-- Contenido del modal, como la grid de imágenes -->
+                <div class="grid-container">
+                    <!-- Imágenes aquí -->
+                </div>
+            </div>
+        </div>
+        
         <section class="main__section main__section--contacto" id="contactos"></section>
 
         <div id="modal-container" class="modal-hidden modal__style">
