I puted the api in the form

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <p class="contacto__texto">Si estás interesado en nuestros servicios, no dudes en contactarnos. Estaremos <br> encantados de atenderte.</p>
             <div class="formulario__contenedor">
               
-              <form class="formulario" action="#">
+              <form class="formulario" action="https://formspree.io/f/xdoqzzqv" method="POST">
                 <div class="formulario__campo">
                   <label for="nombre" class="formulario__label">Nombre:</label>
                   <input type="text" id="nombre" name="nombre" class="formulario__input" placeholder="Tu nombre">
