I added the smoot code

--- a/index.html
+++ b/index.html
@@ -407,7 +407,8 @@
             <p class="footer__content">Jose Joaquin Lara</p>
         </div>
     </footer>
-    
-    <script src="./main.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./main.js" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
