--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
     <main class="main" >
         <section class="main__section main__section--presentacion"  id="home">
-            <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1>
+            <img src='https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg' alt='Dvp-logo-recortado' class="main__section--presentacion-logo"/>
+            <!-- <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1> -->
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
-            <a href="#contactanos" class="contact-button main__section--presentacion--son">Contacto</a>
+            <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
             <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Diseños de vías y pavimento" >
         </section>
         
