--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DVP: Expertos en ingeniería en Colombia. Ofrecemos diseño vial, interventoría de obras y análisis de suelos. Contáctanos para soluciones especializadas con un equipo de especialistas cualificados.">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>dvp</title>
     <link rel="stylesheet" href="css/desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +16,7 @@
 
     <header>
         <a class="contenedor-logo" href="./index.html">
-            <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Logo de la empresa">
+            <img src="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg" alt="Logo de la empresa">
         </a>
         <nav>
             <a href="#home">Home</a>
@@ -30,7 +33,8 @@
             <!-- <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1> -->
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
             <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
-            <img src="https://cdn.pixabay.com/photo/2017/09/25/11/55/cyberspace-2784907_960_720.jpg" alt="Diseños de vías y pavimento" >
+            <iframe  class="youtube-video" src="https://www.youtube.com/embed/VzqUDTZexdA?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         </section>
         
         <section class="main__section main__section--quienessomos" id="dvp">
