I change the header

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
 
     <header>
         <a class="contenedor-logo" href="./index.html">
-            <img src="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg" alt="Logo de la empresa">
+            <img src="https://i.ibb.co/QfFykHQ/Logo-Transparente2.png" alt="Logo de la empresa">
         </a>
         <nav>
             <a href="#home" class="nav__a">Home</a>
-            <a href="#dvp">Dvp</a>
-            <a href="#servicios">Servicios</a>
-            <a href="#experiencia">Experiencia</a>
-            <a href="#contactos">Contacto</a>
+            <a href="#dvp" class="nav__a">Dvp</a>
+            <a href="#servicios" class="nav__a">Servicios</a>
+            <a href="#experiencia" class="nav__a">Experiencia</a>
+            <a href="#contactos" class="nav__a">Contacto</a>
         </nav>
     </header>
 
     <main class="main" >
-        <section class="main__section main__section--presentacion"  id="home">
+        <section class="main__section main__section--presentacion" id="home" >
             <img src='https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg' alt='Dvp-logo-recortado' class="main__section--presentacion-logo"/>
             <!-- <h1 class="main__section--presentacion--son">Diseños vias y pavimento</h1> -->
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, estudios y <br> diseños.</p>
@@ -164,7 +164,7 @@
 
         </section>
         
-        <section class="main__section main__section--empresasQueConfian">
+        <section class="main__section main__section--empresasQueConfian" >
 
             <div class="empresas-fijo">Empresas que confían en DVP:</div>
             <div class="empresas-desplazamiento">
