I am doing the dinamics header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 
     <section class="main__section main__section--presentacion" id="home" >
-        <header>
+        <header class="main__section--presentacion--header">
             <a class="contenedor-logo" href="./index.html">
                 <img src="https://i.ibb.co/QfFykHQ/Logo-Transparente2.png" alt="Logo de la empresa">
             </a>
